--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- header start -->
     <header>
       <nav>
-        <h3 class="nav-title">G3 Architects</h3>
+        <h3 class="section-title">G3 Architects</h3>
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">About</a></li>
@@ -33,21 +33,39 @@
     </header>
     <!-- header end -->
     <main>
-        <!-- feature section -->
-        <section class="teams-container">
-            <!-- team section -->
-            <div class="teams-img-container">
-                <img src="./images/team1.png" alt="">
-                <img src="./images/team2.png" alt="">
-                <img src="./images/team3.png" alt="">
-                <img src="./images/team4.png" alt="">
-            </div>
-            <div class="teams-content">
-                <h3 class="teams-title"><span class="quick-list text-light-gray">Quick list</span><span class="of-our"> of Our</span> <span class="text-features">Features</span></h3>
-                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button class="btn-primary">Explore More</button>
-            </div>
-        </section>
+      <!-- feature section -->
+      <section class="teams-container">
+        <!-- team section -->
+        <div class="teams-img-container">
+          <img src="./images/team1.png" alt="" />
+          <img src="./images/team2.png" alt="" />
+          <img src="./images/team3.png" alt="" />
+          <img src="./images/team4.png" alt="" />
+        </div>
+        <div class="teams-content">
+          <h3 class="teams-title">
+            <span class="quick-list text-light-gray">Quick list</span
+            ><span class="of-our"> of Our</span>
+            <span class="text-features">Features</span>
+          </h3>
+          <p class="text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+      <!-- features section -->
+      <section class="features"></section>
+      <!-- facts section -->
+      <section class="facts">
+        <h3 class="section-title">Some Facts</h3>
+        <p class="text-light-gray">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+      </section>
     </main>
     <footer></footer>
   </body>
